Fixed small alignment issue for small screens on plutus calculator

--- a/src/app/Pages/misc/pages/misc-plutus-new/plutus-new/misc-plutus-new.component.css
+++ b/src/app/Pages/misc/pages/misc-plutus-new/plutus-new/misc-plutus-new.component.css
@@ -484,6 +484,12 @@ hr {
         margin-bottom: 10px;
     }
 
+    .averageSpendInput {
+        margin: 0px;
+        margin-bottom: 31px;
+    }
+    
+
     .promoButton {
         width: 230px;
     }
